[gd_scene load_steps=7 format=3 uid="uid://ce3md1b5hhgpg"]

[ext_resource type="Texture2D" uid="uid://df1bsmf81s6nu" path="res://Art/MenuArt/button.png" id="1_0fumj"]
[ext_resource type="Texture2D" uid="uid://dv4hdo5ecw4e5" path="res://Art/MenuArt/hoverbutton.png" id="2_664h8"]
[ext_resource type="Script" path="res://Scripts/MenuGUIScripts/Refit/weapon_item_refit.gd" id="3_uhf50"]
[ext_resource type="Texture2D" uid="uid://bxuqhr406b5a4" path="res://Art/WeaponArt/weapon.png" id="4_f17mg"]
[ext_resource type="Theme" uid="uid://didj7odtya3rd" path="res://ThemesandFonts/Themes/MainMenuButtonTheme.tres" id="5_366w7"]
[ext_resource type="Texture2D" uid="uid://bmfq47tneelw4" path="res://Art/WeaponArt/weapon_mount_refit_selected.png" id="5_pcb0w"]

[node name="WeaponItemBackground" type="TextureButton"]
self_modulate = Color(0, 0, 0, 1)
offset_right = 500.0
offset_bottom = 100.0
focus_mode = 0
action_mode = 0
button_mask = 3
texture_normal = ExtResource("1_0fumj")
texture_pressed = ExtResource("1_0fumj")
texture_hover = ExtResource("2_664h8")
script = ExtResource("3_uhf50")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 102.0
offset_bottom = 103.0
texture = ExtResource("4_f17mg")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = -1.0
offset_top = -3.0
offset_right = 98.0
offset_bottom = 96.0
texture = ExtResource("5_pcb0w")
expand_mode = 1

[node name="WeaponName" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 102.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("5_366w7")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Weapon Name"
fit_content = true
scroll_active = false

[node name="WeaponInfo" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 102.0
offset_top = 24.0
offset_right = -53.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("5_366w7")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Role, Range"
scroll_active = false

[node name="WeaponCount" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 102.0
offset_top = 50.0
offset_right = -115.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("5_366w7")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "X in inventory"
scroll_active = false

[node name="OrdinancePointCount" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 435.0
offset_top = 32.0
offset_right = 1.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("5_366w7")
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "10"
scroll_active = false

[node name="OPLabel" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 302.0
offset_top = 72.0
offset_right = 31.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("5_366w7")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Ordinance Points"
scroll_active = false
